--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,13 @@
-*{
-    margin: 0;
-    padding: 0%;
-    box-sizing: border-box;
-    font-family:Arial, Helvetica, sans-serif;
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  height: 100vh;
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #84a59d;
 }
