--- a/src/pages/AdminPage/AdminPage.scss
+++ b/src/pages/AdminPage/AdminPage.scss
@@ -1,5 +1,15 @@
 .AdminPage{
-    height: 80vh;
+    height: 100vh;
+    background-image: url('./desk-2325627.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    
+    .wrapper{
+        overflow: auto;
+        flex: 1;
+
 
     input {
         margin: 20px;
@@ -10,18 +20,28 @@
         background-position-x: 2%;
         padding-left: 50px;
         border-radius: 20px;
+        border: none;
+        &:focus{
+            outline: none;
+          }
+          &:hover{
+            -webkit-box-shadow: -1px -1px 13px 1px rgba(177,211,5,0.76); 
+box-shadow: -1px -1px 13px 1px rgba(177,211,5,0.76);
+            cursor: pointer;
       }
+    }
 
       .reports {
         .singleReport {
        
                 width: 100%;
                 padding: 20px 10px;
-                background-color: beige;
+                background-color:rgba($color: #ffffff, $alpha: 0.8);
                 margin: 10px 0;
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
+                color: #38544f;
 
                 .detail{
                     display: flex;
@@ -33,10 +53,24 @@
 
                 }
                 button{
+                    color:white;
+                    border: 1px solid #efefef;
                     padding: 10px 20px;
+                    background-color: rgb(177,211,5);
+                    border-radius: 20px;
+                    transition: 100ms;
+                    &:last-of-type{
+                        padding: 10px 14px;
+                    }
+                    &:hover{
+                        cursor: pointer;
+                        transform: scale(1.1);
+                    }
                 }
             }
         }
     }
+    }
+
 
 // }
