--- a/src/pages/SinglePage/SinglePage.scss
+++ b/src/pages/SinglePage/SinglePage.scss
@@ -1,96 +1,109 @@
-.SinglePage{
+.SinglePage {
   position: relative;
   height: 100vh;
-  
-  .wrapper{
-    padding: 30px;
-    
-    .heading{
-      margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+
+  .wrapper {
+    height: 100vh;
+    padding: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-image: url("./desk-2325627.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    overflow: auto;
+    flex: 1;
+
+    .heading {
+      margin: 20px;
+      font-size: 40px;
+      color: #85ada5;
+      text-align: center;
     }
-    
-      .top-wrapper{
-        display: flex;
-        justify-content: center;
 
-        .details-wrapper{
-            padding: 30px;
+    .top-wrapper {
+      display: flex;
+      width: 70%;
+      justify-content: center;
+      align-items: center;
+      background-color: rgba($color: #ffffff, $alpha: 0.8);
 
-            h2{
-                padding-bottom: 20px;
-                padding-left: 10px;
+      .details-wrapper {
+        padding: 30px;
 
-            }
+        h2 {
+          padding-bottom: 20px;
+          padding-left: 10px;
         }
-
-        img{
-            padding: 20px;
-            height: 500px;
-            margin-right:20px;
-        }
-
       }
-      .bottom-wrapper{
-        width: 100%;
-        
 
-      
-      .titles{
+      img {
+        padding: 20px;
+        height: 500px;
+        margin-right: 20px;
+      }
+    }
+    .bottom-wrapper {
+      width: 100%;
+
+      .titles {
         display: flex;
         justify-content: space-evenly;
-        background-color: bisque;
+        background-color: #85ada5;
+        color: white;
 
-        
-        *{
-            width: 33%;
-            text-align: center;
-            
-            padding: 10px;
+        * {
+          width: 33%;
+          text-align: center;
+
+          padding: 10px;
         }
       }
 
-
-      .reports{
+      .reports {
         display: flex;
         width: 100%;
-        background-color: rgb(206, 198, 189);
+        background-color: rgba($color: #ffffff, $alpha: 0.8);
         padding: 10px;
         flex-wrap: wrap;
-        
 
-        .report{
-            div{
-                width: 33%;
-                display: flex;
-                justify-content: center;
-
-                &:last-of-type>p{
-                    display: inline;
-                    // padding-right: 30px;
-                    
-
-                }
-                &:last-of-type>button{
-                   margin-left: 36%;
-                }
-               &:last-of-type{
-                display: flex;
-                justify-content:flex-end
-                ;
-               }
-            }
+        .report {
+          div {
+            width: 33%;
             display: flex;
-            width: 100%;
-            padding: 10px;
-            justify-content: space-evenly;
-           
-          
-         
-        
-            
+            justify-content: center;
 
+            &:last-of-type > p {
+              display: inline;
+              // padding-right: 30px;
+            }
+            &:last-of-type > button {
+              margin-left: 36%;
+            }
+            &:last-of-type {
+              display: flex;
+              justify-content: flex-end;
+            }
+          }
+          display: flex;
+          width: 100%;
+          padding: 10px;
+          justify-content: space-evenly;
+
+          button {
+            background-color: #b1d305;
+            color: white;
+            padding: 10px 10px;
+            border: none;
+            border-radius: 10px;
+            &:hover {
+              cursor: pointer;
+            }
+          }
         }
       }
     }
-}
+  }
 }
