--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -34,7 +34,7 @@
       margin: 10px;
       background-color: #b1d305;
       color: white;
-      &:hover{
+      &:hover {
         cursor: pointer;
       }
     }
@@ -52,7 +52,7 @@
 
     .detail {
       padding: 10px;
-      p{
+      p {
         color: #85ada5;
       }
     }
@@ -63,7 +63,7 @@
     p:first-of-type {
       font-weight: 700;
       padding: 10px 0;
-      color: #85ada5
+      color: #85ada5;
     }
   }
 }
