--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&family=Quicksand&display=swap");
+
 body {
   margin: 0;
   padding: 0;
@@ -8,6 +10,5 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
- 
+  font-family: "Montserrat", sans-serif;
 }
