--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -3,6 +3,9 @@
   background-image: url("./desk-2325627.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  &.dark {
+    background-image: url("./office-865091.jpg");
+  }
 
   .wrapper {
     padding: 0 235px;
@@ -31,10 +34,9 @@
           padding: 10px;
         }
       }
-      
     }
     input {
-      margin: 20px;
+      margin: 50px;
       padding: 10px;
       width: 45vh;
       border: none;
