--- a/src/pages/LogInPage/LogInPage.scss
+++ b/src/pages/LogInPage/LogInPage.scss
@@ -1,18 +1,20 @@
 .LogInPage {
   height: 100vh;
-  background-image: url('./desk-2325627.jpg');
+  background-image: url("./desk-2325627.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  &.dark {
+    background-image: url("./office-865091.jpg");
+  }
 
   .wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
-    
 
     .container {
       margin-top: 70px;
-      background-color:rgba($color: #ffffff, $alpha: 0.8);
+      background-color: rgba($color: #ffffff, $alpha: 0.8);
       padding: 100px;
       display: flex;
       justify-content: center;
@@ -20,6 +22,7 @@
       flex-direction: column;
       border-radius: 20px;
       color: #38544f;
+      min-height: 650px;
 
       h1 {
         margin-bottom: 20px;
@@ -35,32 +38,34 @@
         padding: 20px;
         border-radius: 20px;
         border: none;
-        &:focus{
+        &:focus {
           outline: none;
         }
-        &:hover{
-          -webkit-box-shadow: -1px -1px 13px 1px rgba(177,211,5,0.76); 
-          box-shadow: -1px -1px 13px 1px rgba(177,211,5,0.76);
-          cursor: pointer;}
-        
+        &:hover {
+          -webkit-box-shadow: -1px -1px 13px 1px rgba(177, 211, 5, 0.76);
+          box-shadow: -1px -1px 13px 1px rgba(177, 211, 5, 0.76);
+          cursor: pointer;
+        }
       }
 
       button {
         margin: 30px;
         width: 100px;
         height: 40px;
-        color:white;
+        color: white;
         border: 1px solid #efefef;
         padding: 10px 14px;
-        background-color: rgb(177,211,5);
+        background-color: rgb(177, 211, 5);
         border-radius: 20px;
         transition: 100ms;
-        &:hover{
+        &:hover {
           cursor: pointer;
           transform: scale(1.1);
+        }
       }
-        
-
+      #error {
+        height: 10px;
+        color: rgb(214, 40, 40);
       }
     }
   }
