--- a/src/pages/SinglePage/SinglePage.scss
+++ b/src/pages/SinglePage/SinglePage.scss
@@ -15,6 +15,9 @@
     background-size: cover;
     overflow: auto;
     flex: 1;
+    &.dark {
+      background-image: url("./office-865091.jpg");
+    }
 
     .heading {
       margin: 20px;
@@ -41,7 +44,7 @@
 
       img {
         padding: 20px;
-        height: 500px;
+        height: 480px;
         margin-right: 20px;
       }
     }
